test/TestPhases/namecheck/valid/increment.blc
module


activity empty ()()
    var x: int64 = 15
    x = x + 1
    await false;
end
