test/TestPhases/namecheck/invalid/incrementFAIL2.blc
module


activity empty ()()
    var y: int64 = 15
    x = x + 1
    await false;
end
